(include_subdirs unqualified)

(library
 (public_name owi)
 (modules
  annotated
  assigned
  benchmark
  binary
  binary_encoder
  binary_parser
  binary_to_text
  binary_validate
  choice_intf
  call_graph
  cmd_utils
  cmd_c
  cmd_call_graph
  cmd_cfg
  cmd_cpp
  cmd_fmt
  cmd_instrument_label
  cmd_iso
  cmd_replay
  cmd_run
  cmd_rust
  cmd_script
  cmd_sym
  cmd_tinygo
  cmd_validate
  cmd_version
  cmd_wasm2wat
  cmd_wat2wasm
  cmd_zig
  compile
  concrete
  concrete_choice
  concrete_extern_func
  concrete_global
  concrete_memory
  concrete_table
  concrete_value
  concrete_wasm_ffi
  control_flow_graph
  convert
  env_id
  exploration_smart
  float32
  float64
  func_id
  func_intf
  grouped
  imported
  indexed
  int32
  int64
  interpret
  interpret_intf
  kind
  label
  link
  link_env
  log
  named
  owi
  parse
  pq_imperative
  prio
  priority_queue
  result
  rewrite
  runtime
  script
  symbol_scope
  sexp
  share
  solver
  symbolic
  symbolic_choice
  symbolic_choice_intf
  symbolic_choice_with_memory
  symbolic_choice_without_memory
  symbolic_functor
  symbolic_global
  symbolic_memory_concretizing
  symbolic_memory_intf
  symbolic_memory_make
  symbolic_path_condition
  symbolic_table
  symbolic_value
  symbolic_wasm_ffi
  spectest
  stack
  string_map
  syntax
  text
  text_lexer
  text_parser
  text_validate
  thread
  thread_intf
  thread_with_memory
  thread_without_memory
  union_find
  value_intf
  v
  v128
  wasm_ffi_intf
  wast
  work_ds_intf
  wpq
  wq_random
  wq
  ws
  wutf8)
 (private_modules
  binary_parser
  convert
  spectest
  text_lexer
  text_parser
  wutf8)
 (libraries
  bos
  digestif
  dune-build-info
  dune-site
  fmt
  fmt.cli
  fmt.tty
  smtml
  hc
  logs
  logs.cli
  logs.fmt
  logs.threaded
  menhirLib
  ocamlgraph
  ocaml_intrinsics
  ppxlib
  prelude
  processor
  sedlex
  synchronizer
  uutf
  runtime_events
  mtime
  mtime.clock
  xmlm)
 (flags
  (:standard -open Prelude))
 (preprocess
  (pps sedlex.ppx))
 (instrumentation
  (backend bisect_ppx --exclusions src/bisect.exclude)
  (deps bisect.exclude))
 (instrumentation
  (backend landmarks --auto)))

(env
 (_
  (flags
   (-w +a-4-40-41-42-44-45-70-73 -warn-error +a-58))))

(generate_sites_module
 (module share)
 (sites owi))
