(include_subdirs unqualified)

(library
 (public_name owi)
 (modules
  abstract_boolean
  abstract_checker
  abstract_domain
  abstract_driver
  abstract_extern_func
  abstract_f32
  abstract_f64
  abstract_globals
  abstract_i32
  abstract_i64
  abstract_interpreter_simple
  abstract_interpreter_control_flow
  abstract_invariant
  abstract_locals
  abstract_memory
  abstract_monad
  abstract_ref
  abstract_stack
  abstract_state
  abstract_v128
  abstract_value
  abstract_wasm_ffi
  annotated
  assigned
  benchmark
  binary
  binary_encoder
  binary_parser
  binary_to_text
  binary_validate
  boolean_intf
  bug
  choice_intf
  call_graph
  cmd_abs
  cmd_utils
  cmd_c
  cmd_call_graph
  cmd_cfg
  cmd_cpp
  cmd_fmt
  cmd_fuzz
  cmd_haskell
  cmd_instrument_label
  cmd_iso
  cmd_llvm
  cmd_replay
  cmd_run
  cmd_rust
  cmd_script
  cmd_sym
  cmd_tinygo
  cmd_validate
  cmd_version
  cmd_wasm2wat
  cmd_wat2wasm
  cmd_zig
  compile
  concrete_boolean
  concrete_choice
  concrete_data
  concrete_elem
  concrete_env
  concrete_extern_func
  concrete_f32
  concrete_f64
  concrete_global
  concrete_i8
  concrete_i16
  concrete_i32
  concrete_i64
  concrete_memory
  concrete_ref
  concrete_table
  concrete_value
  concrete_v128
  concrete_wasm_ffi
  control_flow_graph
  data_intf
  elem_intf
  env_intf
  exploration_smart
  extern
  float32
  float64
  fop_intf
  f32_intf
  f64_intf
  fuzz_dict
  fuzz_driver
  fuzz_gen
  fuzz_state
  fuzz_wasm_ffi
  global_intf
  grouped
  init
  int32
  int64
  i8_intf
  i16_intf
  i32_intf
  i64_intf
  interpret
  iop_intf
  kind
  label
  link
  linked
  link_env
  log
  memory_intf
  model
  multicore
  origin
  owi
  parse
  prio
  priority_queue
  ref_intf
  result
  rewrite
  script
  symbol_scope
  share
  solver
  symbolic_boolean
  symbolic_choice
  symbolic_data
  symbolic_driver
  symbolic_elem
  symbolic_env
  symbolic_extern_func
  symbolic_f32
  symbolic_f64
  symbolic_global
  symbolic_global0
  symbolic_i8
  symbolic_i16
  symbolic_i32
  symbolic_i64
  symbolic_memory
  symbolic_memory0
  symbolic_parameters
  symbolic_ref
  symbolic_table
  symbolic_table0
  symbolic_value
  symbolic_v128
  symbolic_wasm_ffi
  spectest
  stack
  syntax
  table_intf
  text
  text_keywords
  text_lexer
  text_parser
  text_validate
  thread
  value_intf
  v128_intf
  wasm_ffi_intf
  wast
  wutf8)
 (private_modules binary_parser spectest text_lexer text_parser wutf8)
 (libraries
  bos
  digestif
  domainpc
  dune-build-info
  dune-site
  codex
  fmt
  fmt.cli
  fmt.tty
  smtml
  hc
  logs
  logs.cli
  logs.fmt
  logs.threaded
  menhirLib
  ocamlgraph
  ocaml_intrinsics
  ppxlib
  prelude
  processor
  sedlex
  symex
  synchronizer
  uutf
  runtime_events
  mtime
  mtime.clock
  xmlm)
 (flags
  (:standard -open Prelude))
 (preprocess
  (pps sedlex.ppx))
 (instrumentation
  (backend bisect_ppx --exclusions src/bisect.exclude)
  (deps bisect.exclude))
 (instrumentation
  (backend landmarks --auto)))

(env
 (_
  (flags
   (-w +a-4-40-41-42-44-45-70-73 -warn-error +a-58))))

(generate_sites_module
 (module share)
 (sites owi))
