(executable
 (name testcomp)
 (modules testcomp whitelist)
 (libraries bos fpath rusage yaml unix))

(rule
 (deps whitelist.txt)
 (action
  (with-stdout-to
   whitelist.ml
   (progn
    (echo "let v = {|")
    (cat whitelist.txt)
    (echo "|}")))))

(executable
 (name report)
 (modules report)
 (libraries fpath gnuplot))
