(executable
 (name extern)
 (libraries owi)
 (modules extern))

(executable
 (name extern_mem)
 (libraries owi)
 (modules extern_mem))

(mdx
 (libraries owi fpath)
 (deps
  %{bin:owi}
  (file extern.exe)
  (file extern.ml)
  (file extern.wat)
  (file extern_mem.exe)
  (file extern_mem.ml)
  (file extern_mem.wat))
 (files README.md))
