(include_subdirs no)

(rule
 (target libc.wasm)
 (deps
  src/assert_fail.c
  src/stdlib.c
  src/ctype.c
  src/stdout.c
  src/errno.c
  src/strchr.c
  src/math.c
  src/strcmp.c
  src/memccpy.c
  src/strcpy.c
  src/memchr.c
  src/strdup.c
  src/memcmp.c
  src/strerror.c
  src/memcpy.c
  src/strftime.c
  src/memmove.c
  src/strlen.c
  src/memset.c
  src/strncmp.c
  src/netinet_in.c
  src/strncpy.c
  src/owi.c
  src/strrchr.c
  src/pthread.c
  src/strstr.c
  src/setjmp.c
  src/sys_resources.c
  src/test-comp.c
  src/stderr.c
  src/time.c
  src/stdio.c
  src/unistd.c)
 (action
  (run
   clang
   -O3
   -g
   -ffreestanding
   --no-standard-libraries
   --target=wasm32
   -m32
   -Iinclude
   -Wno-int-conversion
   -Wno-return-type
   -fbracket-depth=512
   ;; -flto ;; [parse exception: bad local.get index (at 0:9769)]
   ;; linker flags
   -Wl,--no-entry
   -Wl,--export-all
   -Wl,--allow-undefined
   -Wl,--relocatable ;; warning: linking section is present, so this is not a standard wasm file - binaryen cannot handle this properly!
                     ;; -Wl,--lto-O3
                     ;; files
   %{deps}
   -o
   %{target})))

(install
 (package owi)
 (section
  (site
   (owi binc)))
 (files libc.wasm))

(install
 (package owi)
 (section
  (site
   (owi pyc)))
 (files instrumentor.py))
