(cram
 (deps
  %{bin:owi}
  add_i32.wat
  add_i64.wat
  assume.wat
  ; binop_i32.wat
  ; binop_i32-2.wat
  ; binop_i64.wat
  ; binop_i64-2.wat
  ; binop_f32.wat
  ; binop_f64.wat
  div_i32.wat
  div_i64.wat
  global.wat
  ; grow.wat
  ; memory.wat
  mini_test.wat
  mul_i32.wat
  mul_i64.wat
  sub_i32.wat
  sub_i64.wat
  table.wat
  ; unop_i32.wat
  ; unop_i64.wat
  ; unop_f32.wat
  ; unop_f64.wat
 ))
