(cram
 (deps
  %{bin:owi}
  add_i32.wat
  add_i64.wat
  add_f32.wat
  add_f64.wat
  assume.wat
  copysign_f32.wat
  copysign_f64.wat
  div_i32.wat
  div_i64.wat
  div_f32.wat
  div_f64.wat
  div_zero.wat
  global.wat
  grow.wat
  memory.wat
  memory2.wat
  mini_test.wat
  mul_i32.wat
  mul_i64.wat
  mul_f32.wat
  mul_f64.wat
  store.wat
  sub_i32.wat
  sub_i64.wat
  sub_f32.wat
  sub_f64.wat
  syntax_error.wat
  table.wat))
