(mdx
 (libraries owi)
 (deps
  %{bin:owi}
  (file f.c)
  (file f.cpp)
  (file f.go)
  (file f.rs)
  (file f.wat)
  (file f.zig)
  (file f_byhand.c)
  (file f_byhand.cpp)
  (file f_byhand.go)
  (file f_byhand.rs)
  (file f_byhand.wat)
  (file f_byhand.zig)
  (file mean.c)
  (file mean.cpp)
  (file mean.go)
  (file mean.rs)
  (file mean.wat)
  (file mean.zig)
  (package owi))
 (files quickstart.md))
