(include_subdirs no)

(executable
 (name script)
 (modules script))

(rule
 (target libc.wasm)
 (deps
  stdlib.o
  ctype.o
  stdout.o
  error.o
  errno.o
  strchr.o
  math.o
  strcmp.o
  memccpy.o
  strcpy.o
  memchr.o
  strdup.o
  memcmp.o
  strerror.o
  memcpy.o
  strftime.o
  memmove.o
  strlen.o
  memset.o
  strncmp.o
  netinet_in.o
  strncpy.o
  strrchr.o
  pthread.o
  strstr.o
  setjmp.o
  sys_resources.o
  stderr.o
  time.o
  stdio.o
  unistd.o)
 (action
  (run wasm-ld %{deps} -o %{target} --no-entry --export-all --relocatable)))

(rule
 (targets
  stdlib.o
  ctype.o
  stdout.o
  error.o
  errno.o
  strchr.o
  math.o
  strcmp.o
  memccpy.o
  strcpy.o
  memchr.o
  strdup.o
  memcmp.o
  strerror.o
  memcpy.o
  strftime.o
  memmove.o
  strlen.o
  memset.o
  strncmp.o
  netinet_in.o
  strncpy.o
  strrchr.o
  pthread.o
  strstr.o
  setjmp.o
  sys_resources.o
  stderr.o
  time.o
  stdio.o
  unistd.o)
 (deps
  src/stdlib.c
  src/ctype.c
  src/stdout.c
  src/error.c
  src/errno.c
  src/strchr.c
  src/math.c
  src/strcmp.c
  src/memccpy.c
  src/strcpy.c
  src/memchr.c
  src/strdup.c
  src/memcmp.c
  src/strerror.c
  src/memcpy.c
  src/strftime.c
  src/memmove.c
  src/strlen.c
  src/memset.c
  src/strncmp.c
  src/netinet_in.c
  src/strncpy.c
  src/strrchr.c
  src/pthread.c
  src/strstr.c
  src/setjmp.c
  src/sys_resources.c
  src/stderr.c
  src/time.c
  src/stdio.c
  src/unistd.c)
 (action
  (run ./script.exe %{deps})))

(install
 (package owi)
 (section
  (site
   (owi c_files)))
 (files libc.wasm))
