(include_subdirs no)

(executable
 (name script)
 (modules script))

(rule
 (target libowi.wasm)
 (deps klee.o owi.o test-comp.o eacsl.o)
 (action
  (run wasm-ld %{deps} -o %{target} --no-entry --export-all --relocatable)))

(rule
 (targets klee.o owi.o test-comp.o eacsl.o)
 (deps src/klee.c src/owi.c src/test-comp.c src/eacsl.c)
 (action
  (run ./script.exe %{deps})))

(install
 (package owi)
 (section
  (site
   (owi c_files)))
 (files libowi.wasm))
