(rule
 (target libowi_sym.rlib)
 (deps
  (glob_files_rec *.rs))
 (action
  (run
   rustc
   --target=wasm32-unknown-unknown
   --edition=2021
   --crate-type=rlib
   --crate-name
   owi_sym
   src/owi_sym.rs)))

(install
 (package owi)
 (section
  (site
   (owi rust_files)))
 (files libowi_sym.rlib))
