(executable
 (name life_console)
 (modules life_console)
 (libraries unix owi))

(executable
 (name life_graphics)
 (modules life_graphics)
 (libraries unix graphics owi))

(executable
 (name runweb)
 (modules runweb content)
 (libraries tiny_httpd))

(rule
 (with-stdout-to
  content.ml
  (progn
   (echo "let life_wasm = {|")
   (cat content/life.wasm)
   (echo "|}")
   (echo "let index_html = {|")
   (cat content/index.html)
   (echo "|}")
   (echo "let life_browser_js = {|")
   (cat content/life_browser.js)
   (echo "|}"))))
