(cram
 (deps
  %{bin:owi}
  i64_clz.wat
  i64_ctz.wat
  i64_eqz.wat
  i64_extend_i32_s.wat
  i64_extend_i32_u.wat
  i64_extend8_s.wat
  i64_extend16_s.wat
  i64_extend32_s.wat
  i64_popcnt.wat
  i64_reinterpret_f32.wat
  i64_trunc_f32_s_ge_s.wat
  i64_trunc_f32_s_gt_s.wat
  i64_trunc_f32_s_le_s.wat
  i64_trunc_f32_s_lt_s.wat
  i64_trunc_f32_u_ge_u.wat
  i64_trunc_f32_u_gt_u.wat
  i64_trunc_f32_u_le_u.wat
  i64_trunc_f32_u_lt_u.wat
  i64_trunc_f64_s_ge_s.wat
  i64_trunc_f64_s_gt_s.wat
  i64_trunc_f64_s_le_s.wat
  i64_trunc_f64_s_lt_s.wat
  i64_trunc_f64_u_ge_u.wat
  i64_trunc_f64_u_gt_u.wat
  i64_trunc_f64_u_le_u.wat
  i64_trunc_f64_u_lt_u.wat))
